Fix Contact section alignment

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -12,6 +12,7 @@
 .contact-flex {
   display: flex;
   justify-content: space-between;
+  padding-right: 80px;
 }
 .contact-flex h4 {
   font-weight: 500;
@@ -56,6 +57,9 @@ a.contact-social {
   a.contact-social {
     font-size: 22px;
   }
+  .contact-flex {
+    padding-right: 60px;
+  }
 }
 @media only screen and (max-width: 1300px) {
   .contact-section h3 {
@@ -67,6 +71,9 @@ a.contact-social {
   a.contact-social {
     font-size: 20px;
   }
+  .contact-flex {
+    padding-right: 40px;
+  }
   .contact-flex p {
     margin-top: 0px;
   }
@@ -75,6 +82,7 @@ a.contact-social {
   .contact-flex {
     flex-direction: column;
     gap: 40px;
+    padding-right: 0;
   }
   .contact-flex p {
     margin-bottom: 0px;
